Workflow tests - soapui examples updated, soapui beta template+workflow for template case added

--- a/test/suites/soapui-suite-full.yaml
+++ b/test/suites/soapui-suite-full.yaml
@@ -12,3 +12,6 @@ spec:
       parallelism: 2
       workflows:
       - name: soapui-workflow-smoke
+      - name: soapui-workflow-smoke-command-line-env
+      - name: soapui-workflow-smoke-negative-non-existant-file
+      - name: soapui-workflow-smoke-template
