--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -52,8 +52,8 @@ jobs:
             proto/logs.proto
             proto/service.proto
 
-      - name: Lint OpenAPI
-        uses: swaggerexpert/swagger-editor-validate@v1
-        with:
-          definition-file: api/v1/testkube.yaml
-          default-timeout: 20000
+#      - name: Lint OpenAPI
+#        uses: swaggerexpert/swagger-editor-validate@v1
+#        with:
+#          definition-file: api/v1/testkube.yaml
+#          default-timeout: 20000
