--- a/test/special-cases/special-cases.yaml
+++ b/test/special-cases/special-cases.yaml
@@ -573,3 +573,21 @@ spec:
     artifacts:
       paths:
         - /data/**/aaa/**/*
+---
+apiVersion: testworkflows.testkube.io/v1
+kind: TestWorkflow
+metadata:
+  name: special-cases-execution-tags
+  labels:
+    core-tests: special-cases
+spec:
+  container:
+    image: alpine:3.22.0
+  execution:
+    tags:
+      example: execution-tag
+      another: tag-value
+      id: "{{ execution.id }}"
+  steps:
+  - name: Step
+    shell: echo "Step" && exit 0
