--- a/test/pact/pact-js-project/crd-workflow/smoke.yaml
+++ b/test/pact/pact-js-project/crd-workflow/smoke.yaml
@@ -6,6 +6,8 @@ metadata:
     core-tests: workflows
     tool: pact
     category: api-testing
+  annotations:
+    testkube.io/icon: pact
 spec:
   content:
     git:
