--- a/test/curl/crd-workflow/smoke.yaml
+++ b/test/curl/crd-workflow/smoke.yaml
@@ -6,6 +6,8 @@ metadata:
     core-tests: workflows
     tool: curl
     category: api-testing
+  annotations:
+    testkube.io/icon: curl
 spec:
   container:
     resources:
