--- a/test/cypress/crd-workflow/smoke.yaml
+++ b/test/cypress/crd-workflow/smoke.yaml
@@ -7,6 +7,8 @@ metadata:
     tool: cypress
     artifacts: "true"
     category: e2e-ui-testing
+  annotations:
+    testkube.io/icon: cypress
 spec:
   content:
     git:
@@ -46,6 +48,8 @@ metadata:
     tool: cypress
     artifacts: "true"
     category: e2e-ui-testing
+  annotations:
+    testkube.io/icon: cypress
 spec:
   content:
     git:
@@ -90,6 +94,8 @@ metadata:
     artifacts: "true"
     category: e2e-ui-testing
     junit: "true"
+  annotations:
+    testkube.io/icon: cypress
 spec:
   content:
     git:
@@ -137,6 +143,8 @@ metadata:
     tool: cypress
     artifacts: "true"
     category: e2e-ui-testing
+  annotations:
+    testkube.io/icon: cypress
 spec:
   content:
     git:
@@ -200,6 +208,8 @@ metadata:
     tool: cypress
     artifacts: "true"
     category: e2e-ui-testing
+  annotations:
+    testkube.io/icon: cypress
 spec:
   content:
     git:
@@ -244,6 +254,8 @@ metadata:
     artifacts: "true"
     artifacts-video: "true"
     category: e2e-ui-testing
+  annotations:
+    testkube.io/icon: cypress
 spec:
   content:
     git:
@@ -287,6 +299,8 @@ metadata:
     tool: cypress
     category: e2e-ui-testing
     artifacts: "true"
+  annotations: 
+    testkube.io/icon: cypress
 spec:
   content:
     git:
@@ -326,6 +340,8 @@ metadata:
     core-tests: workflows
     tool: cypress
     category: e2e-ui-testing
+  annotations:
+    testkube.io/icon: cypress
 spec:
   content:
     git:
@@ -362,6 +378,8 @@ metadata:
     core-tests: workflows
     tool: cypress
     category: e2e-ui-testing
+  annotations:
+    testkube.io/icon: cypress
 spec:
   container:
     resources:
@@ -399,6 +417,8 @@ metadata:
     core-tests: workflows
     tool: cypress
     category: e2e-ui-testing
+  annotations:
+    testkube.io/icon: cypress
 spec:
   container:
     resources:
@@ -439,6 +459,8 @@ metadata:
     tool: cypress
     artifacts: "true"
     category: e2e-ui-testing
+  annotations:
+    testkube.io/icon: cypress
 spec:
   content:
     git:
@@ -482,6 +504,8 @@ metadata:
     tool: cypress
     artifacts: "true"
     category: e2e-ui-testing
+  annotations:
+    testkube.io/icon: cypress
 spec:
   content:
     git:
@@ -540,6 +564,8 @@ metadata:
     artifacts: "true"
     junit: "true"
     category: e2e-ui-testing
+  annotations:
+    testkube.io/icon: cypress
 spec:
   content:
     git:
