--- a/test/jmeter/crd-workflow/smoke.yaml
+++ b/test/jmeter/crd-workflow/smoke.yaml
@@ -6,6 +6,8 @@ metadata:
     core-tests: workflows
     tool: jmeter
     category: performance-testing
+  annotations:
+    testkube.io/icon: jmeter
 spec:
   content:
     git:
@@ -40,6 +42,8 @@ metadata:
     core-tests: workflows
     tool: jmeter
     category: performance-testing
+  annotations:
+    testkube.io/icon: jmeter
 spec:
   content:
     git:
@@ -75,6 +79,8 @@ metadata:
     tool: jmeter
     artifacts: "true"
     category: performance-testing
+  annotations:
+    testkube.io/icon: jmeter
 spec:
   content:
     git:
@@ -111,6 +117,8 @@ metadata:
     tool: jmeter
     category: performance-testing
     artifacts: "true"
+  annotations:
+    testkube.io/icon: jmeter
 spec:
   content:
     git:
@@ -144,6 +152,8 @@ metadata:
     core-tests: workflows
     artifacts: "true"
     category: performance-testing
+  annotations:
+    testkube.io/icon: jmeter
 spec:
   content:
     git:
@@ -177,6 +187,8 @@ metadata:
     core-tests: workflows
     artifacts: "true"
     category: performance-testing
+  annotations:
+    testkube.io/icon: jmeter
 spec:
   content:
     git:
@@ -213,6 +225,8 @@ metadata:
     core-tests: workflows
     tool: jmeter
     category: performance-testing
+  annotations:
+    testkube.io/icon: jmeter
 spec:
   content:
     git:
@@ -247,6 +261,8 @@ metadata:
     core-tests: workflows
     tool: jmeter
     category: performance-testing
+  annotations:
+    testkube.io/icon: jmeter
 spec:
   content:
     git:
@@ -308,6 +324,8 @@ metadata:
     tool: jmeter
     artifacts: "true"
     category: performance-testing
+  annotations:
+    testkube.io/icon: jmeter
 spec:
   content:
     git:
