--- a/test/junit/crd-workflow/smoke.yaml
+++ b/test/junit/crd-workflow/smoke.yaml
@@ -7,6 +7,8 @@ metadata:
     tool: junit
     artifacts: "true"
     category: unit-component-testing
+  annotations:
+    testkube.io/icon: junit
 spec:
   content:
     git:
@@ -38,6 +40,8 @@ metadata:
     core-tests: expected-fail
     artifacts: "true"
     category: unit-component-testing
+  annotations:
+    testkube.io/icon: junit
 spec:
   content:
     git:
@@ -69,6 +73,8 @@ metadata:
     core-tests: expected-fail
     artifacts: "true"
     category: unit-component-testing
+  annotations:
+    testkube.io/icon: junit
 spec:
   content:
     git:
