--- a/test/pytest/crd-workflow/smoke.yaml
+++ b/test/pytest/crd-workflow/smoke.yaml
@@ -6,6 +6,8 @@ metadata:
     core-tests: workflows
     tool: pytest
     category: unit-component-testing
+  annotations:
+    testkube.io/icon: pytest
 spec:
   content:
     git:
@@ -38,6 +40,8 @@ metadata:
     artifacts: "true"
     junit: "true"
     category: unit-component-testing
+  annotations:
+    testkube.io/icon: pytest
 spec:
   content:
     git:
@@ -74,6 +78,8 @@ metadata:
     artifacts: "true"
     junit: "true"
     category: unit-component-testing
+  annotations:
+    testkube.io/icon: pytest
 spec:
   content:
     git:
@@ -110,6 +116,8 @@ metadata:
     artifacts: "true"
     junit: "true"
     category: unit-component-testing
+  annotations:
+    testkube.io/icon: pytest
 spec:
   content:
     git:
