--- a/test/robotframework/crd/smoke.yaml
+++ b/test/robotframework/crd/smoke.yaml
@@ -7,6 +7,8 @@ metadata:
     category: e2e-ui-testing
     junit: "true"
     artifacts: "true"
+  annotations:
+    testkube.io/icon: robotframework
 spec:
   content:
     git:
