[TKC-4612] chore: Mute workflow

--- a/api/v1/testkube.yaml
+++ b/api/v1/testkube.yaml
@@ -9536,7 +9536,7 @@ components:
           items:
             $ref: "#/components/schemas/TestWorkflowEvent"
         execution:
-          $ref: "#/components/schemas/TestWorkflowTagSchema"
+          $ref: "#/components/schemas/TestWorkflowExecutionSchema"
         pvcs:
           type: object
           additionalProperties:
@@ -9580,7 +9580,7 @@ components:
           items:
             $ref: "#/components/schemas/TestWorkflowEvent"
         execution:
-          $ref: "#/components/schemas/TestWorkflowTagSchema"
+          $ref: "#/components/schemas/TestWorkflowExecutionSchema"
         pvcs:
           type: object
           additionalProperties:
@@ -10522,14 +10522,18 @@ components:
           description: disable CDEvents for this execution
           default: false
 
-    TestWorkflowTagSchema:
+    TestWorkflowExecutionSchema:
       type: object
-      description: test workflow execution tag definition
+      description: test workflow execution configuration
       properties:
         tags:
           $ref: "#/components/schemas/TestWorkflowTagValue"
         target:
           $ref: "#/components/schemas/ExecutionTarget"
+        muted:
+          type: boolean
+          description: indicates that all executions should be silent by default. When true, SilentMode is activated for all executions (Webhooks, Insights, Health, Metrics, Cdevents all set to true).
+          default: false
 
     TestWorkflowExecutionTags:
       type: object
