--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,9 @@ movie.mp4
 
 # Local
 build/_local/values.dev.yaml
+tilt-values.yaml
+tilt_modules/
+.tiltbuild/
 depot-build-meta.json
 
 # Environment files
