feat: muted workflows (#6958)
* [TKC-4612] chore: Mute workflow

* fix tests

* Add silent mode on the fly if workflow is muted for every execution

* fix lint issues

* fix loading workflow properly

* fix copy deep

* Rename muted to silent and fix code reviews

* add missing file

* update crds

* update docker ignore

---------

Co-authored-by: Florin Spataru <fspataru@rbi.com>

--- a/k8s/crd/testworkflows.testkube.io_testworkflows.yaml
+++ b/k8s/crd/testworkflows.testkube.io_testworkflows.yaml
@@ -4138,6 +4138,9 @@ spec:
                 execution:
                   description: values to be used for test workflow execution
                   properties:
+                    silent:
+                      description: When true, SilentMode is activated for all executions (Webhooks, Insights, Health, Metrics, Cdevents all set to true).
+                      type: boolean
                     tags:
                       additionalProperties:
                         type: string
