--- a/test/special-cases/special-cases.yaml
+++ b/test/special-cases/special-cases.yaml
@@ -591,3 +591,35 @@ spec:
   steps:
   - name: Step
     shell: echo "Step" && exit 0
+---
+apiVersion: testworkflows.testkube.io/v1
+kind: TestWorkflow
+metadata:
+  name: special-cases-unique-labels # don't target it specifically
+  labels:
+    unique-label: unique-label-value
+    core-tests: special-cases
+description: "Special-cases workflow for execute.selector.matchLabels test"
+spec:
+  container:
+    image: alpine:3.22.0
+  steps:
+  - name: Step
+    shell: echo "Step" && exit 0
+---
+apiVersion: testworkflows.testkube.io/v1
+kind: TestWorkflow
+metadata:
+  name: special-cases-execute-workflows-selector-matchlabels
+  labels:
+    core-tests: special-cases
+spec:
+  container:
+    image: alpine:3.22.0
+  steps:
+  - name: Step with execute.workflow.selector.matchLabels
+    execute:
+      workflows:
+      - selector:
+          matchLabels:
+            unique-label: unique-label-value
