--- a/test/special-cases/special-cases.yaml
+++ b/test/special-cases/special-cases.yaml
@@ -617,7 +617,7 @@ spec:
   container:
     image: alpine:3.22.0
   steps:
-  - name: Step with execute.workflow.selector.matchLabels
+  - name: Step with execute.workflows.selector.matchLabels
     execute:
       workflows:
       - selector:
