--- a/test/suites/special-cases/special-cases-suite.yaml
+++ b/test/suites/special-cases/special-cases-suite.yaml
@@ -31,6 +31,7 @@ spec:
       - name: special-cases-artifact-double-asterisk
       - name: special-cases-execution-tags
       - name: special-cases-execute-workflows-selector-matchlabels
+      - name: special-cases-silent-workflow
   - name: Execute .dev-specific workflows
     condition: 'environment.id == "tkcenv_03e3ff499f13ccba"' # execute only at .dev environment
     execute:
