--- a/test/special-cases/special-cases.yaml
+++ b/test/special-cases/special-cases.yaml
@@ -623,3 +623,20 @@ spec:
       - selector:
           matchLabels:
             unique-label: unique-label-value
+---
+apiVersion: testworkflows.testkube.io/v1
+kind: TestWorkflow
+metadata:
+  name: special-cases-silent-workflow
+  labels:
+    core-tests: special-cases
+    manual: "true
+description: "Silent workflow - should be excluded from metrics/insights/health, shouldn't trigger webhooks"
+spec:
+  execution:
+    silent: true
+  container:
+    image: alpine:3.22.0
+  steps:
+  - name: Step
+    shell: echo "Step" && exit 0
