--- a/api/v1/testkube.yaml
+++ b/api/v1/testkube.yaml
@@ -5380,6 +5380,8 @@ components:
           format: date-time
         runnerId:
           type: string
+        silentMode:
+          $ref: "#/components/schemas/SilentMode"
 
     Variables:
       type: object
