--- a/test/suites/cron/prod/webhook-prod-e2e-heartbeat-webhook.yaml
+++ b/test/suites/cron/prod/webhook-prod-e2e-heartbeat-webhook.yaml
@@ -2,18 +2,18 @@
 apiVersion: executor.testkube.io/v1
 kind: Webhook
 metadata:
-  name: dev-e2e-heartbeat-webhook
+  name: prod-e2e-heartbeat-webhook
 spec:
   events:
   - end-testworkflow-success
   uri: '{{credential("webhook-e2e-tests-heartbeat-url")}}'
-  selector: heartbeat-type=dev-e2e-webhook
+  selector: heartbeat-type=prod-e2e-webhook
   headers:
     Content-Type: application/json
     X-Heartbeat-Token: '{{credential("webhook-e2e-tests-heartbeat-key")}}'
   payloadTemplate: |-
     {
       "service": "testkube-e2e-webhook",
-      "env": "dev",
+      "env": "prod",
       "info": "workflow={{ .TestWorkflowExecution.Workflow.Name }} status={{ .Type_ }} exec={{ .TestWorkflowExecution.Id }}"
     }
