workflow tests - missing resoure.requests added

--- a/test/curl/crd-workflow/smoke.yaml
+++ b/test/curl/crd-workflow/smoke.yaml
@@ -75,3 +75,7 @@ spec:
         shell: curl -f -LI '{{ matrix.url }}'
         container:
           image: curlimages/curl:8.7.1
+          resources:
+            requests:
+              cpu: 32m
+              memory: 32Mi
