--- a/test/suites/cron/dev/wizard-examples-suite.yaml
+++ b/test/suites/cron/dev/wizard-examples-suite.yaml
@@ -7,6 +7,11 @@ metadata:
     type: workflow-suite
 description: "UI examples"
 spec:
+  container:
+    resources:
+      requests:
+        cpu: 32m
+        memory: 32Mi
   steps:
   - execute:
       parallelism: 2
