--- a/test/suites/cron/prod/prod-e2e-heartbeat-webhook.yaml
+++ b/test/suites/cron/prod/prod-e2e-heartbeat-webhook.yaml
@@ -8,6 +8,11 @@ metadata:
     environment: prod
 spec:
   container:
+    resources:
+      requests:
+        cpu: 32m
+        memory: 32Mi
+  container:
     image: alpine:3.23.2
   steps:
     - name: Step - should pass
