--- a/test/suites/cypress-suite-full.yaml
+++ b/test/suites/cypress-suite-full.yaml
@@ -7,6 +7,11 @@ metadata:
     type: suite
     tool: cypress
 spec:
+  container:
+    resources:
+      requests:
+        cpu: 32m
+        memory: 32Mi
   steps:
   - execute:
       parallelism: 2
