--- a/test/suites/junit-reports-suite.yaml
+++ b/test/suites/junit-reports-suite.yaml
@@ -8,6 +8,11 @@ metadata:
     tool: junit-reports
 description: "JUnit reports - some of them are expected to fail"
 spec:
+  container:
+    resources:
+      requests:
+        cpu: 32m
+        memory: 32Mi
   steps:
   - execute:
       parallelism: 2
