--- a/test/suites/special-cases/small-suite-multiarch.yaml
+++ b/test/suites/special-cases/small-suite-multiarch.yaml
@@ -7,6 +7,11 @@ metadata:
     type: suite
 description: "Small smoke test suite with only workflows using multiarch images (available for both amd64 and arm64)"
 spec:
+  container:
+    resources:
+      requests:
+        cpu: 32m
+        memory: 32Mi
   steps:
   - execute:
       parallelism: 2
