--- a/test/suites/special-cases/testkube-oss-suite.yaml
+++ b/test/suites/special-cases/testkube-oss-suite.yaml
@@ -7,6 +7,11 @@ metadata:
     type: suite
     tool: testkube-oss
 spec:
+  container:
+    resources:
+      requests:
+        cpu: 32m
+        memory: 32Mi
   steps:
   - execute:
       parallelism: 2
