resources typo fixed

--- a/test/locust/crd-workflow/smoke.yaml
+++ b/test/locust/crd-workflow/smoke.yaml
@@ -166,7 +166,7 @@ spec:
       - name: distribute/evenly
       container:
         workingDir: /data/repo/test/locust/locust-project
-        resource:
+        resources:
           requests:
             cpu: 128m
             memory: 128Mi
